--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -2,5 +2,13 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/tormariu/Desktop/minim/library/jl1.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tormariu/Desktop/minim/library/jsminim.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tormariu/Desktop/minim/library/minim.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tormariu/Desktop/minim/library/minim-spi.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tormariu/Desktop/minim/library/mp3spi1.9.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tormariu/Desktop/minim/library/tritonus_aos.jar"/>
+	<classpathentry kind="lib" path="C:/Users/tormariu/Desktop/minim/library/tritonus_share.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
